--- a/tutorial/source/epi_intro.ipynb
+++ b/tutorial/source/epi_intro.ipynb
@@ -774,8 +774,7 @@
     "                    self.coal_likelihood(coal_rate, t)\n",
     "                    if t_is_observed else torch.tensor(0.))\n",
     "```\n",
-    "We first constructed a ``CoalescentRateLikelihood`` objects to be used throughout inference and prediction; this performs preprocessing work once so that it is cheap to evaluate ``self.coal_likelihood(...)``. Note that ``(leaf_times, coal_times)`` should be in units of time steps, the same time steps as the time index `t` and `duration`. Typically ``leaf_times`` are in ``[0, duration)``, but ``coal_times`` precede ``leaf_times`` (as points of common ancestry), and may be negative. The likelihood involves the coalescent rate ``coal_rate`` in a coalescent process; we can compute this fr\n",
-    "om an epidemiological model. In this superspreading model ``coal_rate`` depends on the reproductive number ``R``, the superspreading parameter ``k``, the incubation time ``tau_i``, and the current number of infected individuals ``state[\"I\"]`` [(Li et al. 2017)](#1)."
+    "We first constructed a ``CoalescentRateLikelihood`` object to be used throughout inference and prediction; this performs preprocessing work once so that it is cheap to evaluate ``self.coal_likelihood(...)``. Note that ``(leaf_times, coal_times)`` should be in units of time steps, the same time steps as the time index `t` and `duration`. Typically ``leaf_times`` are in ``[0, duration)``, but ``coal_times`` precede ``leaf_times`` (as points of common ancestry), and may be negative. The likelihood involves the coalescent rate ``coal_rate`` in a coalescent process; we can compute this from an epidemiological model. In this superspreading model ``coal_rate`` depends on the reproductive number ``R``, the superspreading parameter ``k``, the incubation time ``tau_i``, and the current number of infected individuals ``state[\"I\"]`` [(Li et al. 2017)](#1)."
    ]
   },
   {
