Add link to SimpleSEIRDModel

--- a/tutorial/source/epi_intro.ipynb
+++ b/tutorial/source/epi_intro.ipynb
@@ -876,7 +876,9 @@
     "```diff\n",
     "+ state[\"S\"] = state[\"S\"] - S2I  # Correct\n",
     "- state[\"S\"] -= S2I              # AVOID: may corrupt tensors\n",
-    "```"
+    "```\n",
+    "\n",
+    "For a slightly more complex example, take a look at the [SimpleSEIRDModel](http://docs.pyro.ai/en/latest/contrib.epidemiology.html#pyro.contrib.epidemiology.models.SimpleSEIRDModel)."
    ]
   },
   {
