--- a/tutorial/source/epi_intro.ipynb
+++ b/tutorial/source/epi_intro.ipynb
@@ -592,7 +592,7 @@
     "%%time\n",
     "model = SimpleSIRModel(population, recovery_time, obs)\n",
     "mcmc = model.fit_mcmc(num_samples=4 if smoke_test else 400,\n",
-    "                      haar_full_mass=10, jit_compile=True)"
+    "                      jit_compile=True)"
    ]
   },
   {
