removed explicit calls to `forward`

--- a/tutorial/source/vae.ipynb
+++ b/tutorial/source/vae.ipynb
@@ -246,7 +246,7 @@
     "        # sample from prior (value will be sampled by guide when computing the ELBO)\n",
     "        z = pyro.sample(\"latent\", dist.Normal(z_loc, z_scale).to_event(1))\n",
     "        # decode the latent code z\n",
-    "        loc_img = self.decoder.forward(z)\n",
+    "        loc_img = self.decoder(z)\n",
     "        # score against actual images\n",
     "        pyro.sample(\"obs\", dist.Bernoulli(loc_img).to_event(1), obs=x.reshape(-1, 784))"
    ]
@@ -283,7 +283,7 @@
     "    pyro.module(\"encoder\", self.encoder)\n",
     "    with pyro.plate(\"data\", x.shape[0]):\n",
     "        # use the encoder to get the parameters used to define q(z|x)\n",
-    "        z_loc, z_scale = self.encoder.forward(x)\n",
+    "        z_loc, z_scale = self.encoder(x)\n",
     "        # sample the latent code z\n",
     "        pyro.sample(\"latent\", dist.Normal(z_loc, z_scale).to_event(1))"
    ]
@@ -330,7 +330,7 @@
     "            # sample from prior (value will be sampled by guide when computing the ELBO)\n",
     "            z = pyro.sample(\"latent\", dist.Normal(z_loc, z_scale).to_event(1))\n",
     "            # decode the latent code z\n",
-    "            loc_img = self.decoder.forward(z)\n",
+    "            loc_img = self.decoder(z)\n",
     "            # score against actual images\n",
     "            pyro.sample(\"obs\", dist.Bernoulli(loc_img).to_event(1), obs=x.reshape(-1, 784))\n",
     "\n",
@@ -340,7 +340,7 @@
     "        pyro.module(\"encoder\", self.encoder)\n",
     "        with pyro.plate(\"data\", x.shape[0]):\n",
     "            # use the encoder to get the parameters used to define q(z|x)\n",
-    "            z_loc, z_scale = self.encoder.forward(x)\n",
+    "            z_loc, z_scale = self.encoder(x)\n",
     "            # sample the latent code z\n",
     "            pyro.sample(\"latent\", dist.Normal(z_loc, z_scale).to_event(1))\n",
     "\n",
