--- a/tutorial/source/ss-vae.ipynb
+++ b/tutorial/source/ss-vae.ipynb
@@ -122,7 +122,7 @@
     "        # the class label y (which digit to write) against the\n",
     "        # parametrized distribution p(x|y,z) = bernoulli(decoder(y,z))\n",
     "        # where `decoder` is a neural network\n",
-    "        loc = self.decoder.forward([zs, ys])\n",
+    "        loc = self.decoder([zs, ys])\n",
     "        pyro.sample(\"x\", dist.Bernoulli(loc).to_event(1), obs=xs)\n",
     "\n",
     "def guide(self, xs, ys=None):\n",
@@ -131,12 +131,12 @@
     "        # (and score) the digit with the variational distribution\n",
     "        # q(y|x) = categorical(alpha(x))\n",
     "        if ys is None:\n",
-    "            alpha = self.encoder_y.forward(xs)\n",
+    "            alpha = self.encoder_y(xs)\n",
     "            ys = pyro.sample(\"y\", dist.OneHotCategorical(alpha))\n",
     "\n",
     "        # sample (and score) the latent handwriting-style with the variational\n",
     "        # distribution q(z|x,y) = normal(loc(x,y),scale(x,y))\n",
-    "        loc, scale = self.encoder_z.forward([xs, ys])\n",
+    "        loc, scale = self.encoder_z([xs, ys])\n",
     "        pyro.sample(\"z\", dist.Normal(loc, scale).to_event(1))"
    ]
   },
@@ -310,7 +310,7 @@
     "        # this here is the extra term to yield an auxiliary loss\n",
     "        # that we do gradient descent on\n",
     "        if ys is not None:\n",
-    "            alpha = self.encoder_y.forward(xs)\n",
+    "            alpha = self.encoder_y(xs)\n",
     "            with pyro.poutine.scale(scale=self.aux_loss_multiplier):\n",
     "                pyro.sample(\"y_aux\", dist.OneHotCategorical(alpha), obs=ys)\n",
     "\n",
