--- a/tutorial/source/contrib_funsor_intro_i.ipynb
+++ b/tutorial/source/contrib_funsor_intro_i.ipynb
@@ -385,7 +385,7 @@
     "\n",
     "A fully general automated solution to this problem would require deeper integration with Python or PyTorch. Instead, as an intermediate solution, we introduce the second key concept in `pyro.contrib.funsor`: the `pyro.markov` annotation, a way to indicate the shelf life of certain variables. `pyro.markov` is already part of Pyro (see enumeration tutorial) but the implementation in `pyro.contrib.funsor` is fresh.\n",
     "\n",
-    "The primary constraint on the design of `pyro.markov` is backwards compatibility: in order for `pyro.contrib.funsor` to be compatible with the large range of existing Pyro models, the new implementation had to match the shape semantics of Pyro's existing enumeration machinery as closely as possible. See the final section of this tutorial for more on this design decision."
+    "The primary constraint on the design of `pyro.markov` is backwards compatibility: in order for `pyro.contrib.funsor` to be compatible with the large range of existing Pyro models, the new implementation had to match the shape semantics of Pyro's existing enumeration machinery as closely as possible."
    ]
   },
   {
@@ -468,7 +468,7 @@
     "\n",
     "### Global dimensions\n",
     "\n",
-    "It is sometimes useful to have dimensions and variables ignore the `pyro.markov` structure of a program. For example, suppose we wanted to draw a batch of samples from a Pyro model's joint distribution. To accomplish this we indicate to `pyro.to_data` that a dimension should be treated as \"global\" (`DimTypes.GLOBAL`) via the `dim_type` keyword argument."
+    "It is sometimes useful to have dimensions and variables ignore the `pyro.markov` structure of a program and remain active in arbitrarily deeply nested `markov` and `named` contexts. For example, suppose we wanted to draw a batch of samples from a Pyro model's joint distribution. To accomplish this we indicate to `pyro.to_data` that a dimension should be treated as \"global\" (`DimTypes.GLOBAL`) via the `dim_type` keyword argument."
    ]
   },
   {
@@ -528,7 +528,7 @@
     "    tensor_plate2_ids = pyro.to_data(funsor_plate2_ids, dim_type=DimType.GLOBAL)\n",
     "    print(funsor_plate2_ids.inputs, tensor_plate2_ids.shape)\n",
     "    \n",
-    "    _DIM_STACK.global_frame.free(\"plate1\", -1)\n",
+    "    del _DIM_STACK.global_frame[\"plate1\"]\n",
     "    \n",
     "    funsor_plate3_ids = funsor.Tensor(torch.arange(10), OrderedDict(plate3=funsor.bint(10)))\n",
     "    tensor_plate3_ids = pyro.to_data(funsor_plate1_ids, dim_type=DimType.GLOBAL)\n",
@@ -539,7 +539,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Performing this deallocation directly is often unnecessary, and we include this interaction primarily to illuminate the internals of `pyro.contrib.funsor`. Instead, effect handlers that introduce global dimensions, like `pyro.plate`, may inherit from the `pyro.contrib.handlers.named_messenger.GlobalNamedMessenger` effect handler which deallocates global dimensions generically upon entry and exit. We will see an example of this in the next tutorial."
+    "Performing this deallocation directly is often unnecessary, and we include this interaction primarily to illuminate the internals of `pyro.contrib.funsor`. Instead, effect handlers that introduce global dimensions, like `pyro.plate`, may inherit from the `GlobalNamedMessenger` effect handler which deallocates global dimensions generically upon entry and exit. We will see an example of this in the next tutorial."
    ]
   },
   {
@@ -603,16 +603,7 @@
    "source": [
     "Visible dimensions are also global and must therefore be deallocated manually or they will persist until the last effect handler exits, as in the previous example.\n",
     "\n",
-    "Again, interacting directly with the dimension allocator is almost always unnecessary, and we include it here only to illuminate the inner workings of `pyro.contrib.funsor`; rather, effect handlers like `pyro.handlers.enum` that may introduce non-visible dimensions that could conflict with visible dimensions should inherit from the base `pyro.contrib.funsor.handlers.named_messenger.BaseEnumMessenger` effect handler. We will see an example of this in the next tutorial."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Appendix: design rationale\n",
-    "\n",
-    "A final note: to some extent, `pyro.contrib.funsor` is a workaround for lack of easy program analysis and manipulation in Python and PyTorch. However, from PyTorch 1.5 and beyond, we expect this underlying issue to largely disappear, and hope to support increasing (but selective) use of Funsor in model code, not just inference code, and more systematically support propagating real-valued `funsor.Variable`s in model code for fully lazy inference evaluation. See `funsor.minipyro` for more on this."
+    "Again, interacting directly with the dimension allocator is almost always unnecessary, and we include it here only to illuminate the inner workings of `pyro.contrib.funsor`; rather, effect handlers like `pyro.handlers.enum` that may introduce non-visible dimensions that could conflict with visible dimensions should inherit from the base `pyro.contrib.funsor.handlers.named_messenger.NamedMessenger` effect handler. We will see an example of this in the next tutorial."
    ]
   }
  ],
