add a tutorial reference to partial input mappings

--- a/tutorial/source/contrib_funsor_intro_i.ipynb
+++ b/tutorial/source/contrib_funsor_intro_i.ipynb
@@ -315,9 +315,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OrderedDict([('x', bint(2))]) torch.Size([2])\n",
-      "OrderedDict([('y', bint(3)), ('x', bint(2))]) torch.Size([3, 2])\n",
-      "OrderedDict([('z', bint(2)), ('y', bint(3))]) torch.Size([2, 3, 1])\n"
+      "OrderedDict([('x', bint(2))]) torch.Size([2, 1, 1, 1, 1])\n",
+      "OrderedDict([('y', bint(3)), ('x', bint(2))]) torch.Size([3, 2, 1, 1, 1, 1])\n",
+      "OrderedDict([('z', bint(2)), ('y', bint(3))]) torch.Size([2, 3, 1, 1, 1, 1, 1])\n"
      ]
     }
    ],
@@ -354,7 +354,7 @@
      "text": [
       "<class 'funsor.tensor.Tensor'> OrderedDict([('batch', bint(3))]) reals()\n",
       "<class 'funsor.tensor.Tensor'> OrderedDict([('x', bint(4))]) reals()\n",
-      "<class 'pyro.distributions.torch.Bernoulli'> torch.Size([3])\n",
+      "<class 'pyro.distributions.torch.Bernoulli'> torch.Size([3, 1, 1, 1, 1])\n",
       "<class 'funsor.tensor.Tensor'> OrderedDict([('x', bint(4)), ('batch', bint(3))]) reals()\n"
      ]
     }
@@ -372,6 +372,28 @@
     "    print(type(dx), dx.shape())\n",
     "    \n",
     "    px = pyro.to_funsor(dx.log_prob(pyro.to_data(x)), output=funsor.reals())\n",
+    "    print(type(px), px.inputs, px.output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`pyro.to_funsor` and `pyro.to_data` treat the keys in their name-to-dim mappings as references to the input's batch shape, but treats the values as references to the globally consistent name-dim mapping. This may be useful for complicated computations that involve a mixture of PyTorch and Funsor operations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with pyroapi.pyro_backend(\"contrib.funsor\"), handlers.named():\n",
+    "    \n",
+    "    x = pyro.to_funsor(torch.tensor([0., 1.]), funsor.reals(), dim_to_name={-1: \"x\"})\n",
+    "    print(type(x), x.inputs, x.output)\n",
+    "    \n",
+    "    px = pyro.to_funsor(torch.ones(2, 3), funsor.reals(), dim_to_name={-2: \"x\", -1: \"y\"})\n",
     "    print(type(px), px.inputs, px.output)"
    ]
   },
