--- a/tutorial/source/contrib_funsor_intro_i.ipynb
+++ b/tutorial/source/contrib_funsor_intro_i.ipynb
@@ -384,9 +384,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'funsor.tensor.Tensor'> OrderedDict([('x', bint(2))]) reals()\n",
+      "<class 'funsor.tensor.Tensor'> OrderedDict([('x', bint(2)), ('y', bint(3))]) reals()\n"
+     ]
+    }
+   ],
    "source": [
     "with pyroapi.pyro_backend(\"contrib.funsor\"), handlers.named():\n",
     "    \n",
@@ -412,23 +421,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 torch.Size([2])\n",
-      "1 torch.Size([2, 1])\n",
-      "2 torch.Size([2])\n",
-      "3 torch.Size([2, 1])\n",
-      "4 torch.Size([2])\n",
-      "5 torch.Size([2, 1])\n",
-      "6 torch.Size([2])\n",
-      "7 torch.Size([2, 1])\n",
-      "8 torch.Size([2])\n",
-      "9 torch.Size([2, 1])\n"
+      "0 torch.Size([2, 1, 1, 1, 1])\n",
+      "1 torch.Size([2, 1, 1, 1, 1, 1])\n",
+      "2 torch.Size([2, 1, 1, 1, 1])\n",
+      "3 torch.Size([2, 1, 1, 1, 1, 1])\n",
+      "4 torch.Size([2, 1, 1, 1, 1])\n",
+      "5 torch.Size([2, 1, 1, 1, 1, 1])\n",
+      "6 torch.Size([2, 1, 1, 1, 1])\n",
+      "7 torch.Size([2, 1, 1, 1, 1, 1])\n",
+      "8 torch.Size([2, 1, 1, 1, 1])\n",
+      "9 torch.Size([2, 1, 1, 1, 1, 1])\n"
      ]
     }
    ],
@@ -455,23 +464,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 torch.Size([2])\n",
-      "1 torch.Size([2, 1])\n",
-      "2 torch.Size([2, 1, 1])\n",
-      "3 torch.Size([2])\n",
-      "4 torch.Size([2, 1])\n",
-      "5 torch.Size([2, 1, 1])\n",
-      "6 torch.Size([2])\n",
-      "7 torch.Size([2, 1])\n",
-      "8 torch.Size([2, 1, 1])\n",
-      "9 torch.Size([2])\n"
+      "0 torch.Size([2, 1, 1, 1, 1])\n",
+      "1 torch.Size([2, 1, 1, 1, 1, 1])\n",
+      "2 torch.Size([2, 1, 1, 1, 1, 1, 1])\n",
+      "3 torch.Size([2, 1, 1, 1, 1])\n",
+      "4 torch.Size([2, 1, 1, 1, 1, 1])\n",
+      "5 torch.Size([2, 1, 1, 1, 1, 1, 1])\n",
+      "6 torch.Size([2, 1, 1, 1, 1])\n",
+      "7 torch.Size([2, 1, 1, 1, 1, 1])\n",
+      "8 torch.Size([2, 1, 1, 1, 1, 1, 1])\n",
+      "9 torch.Size([2, 1, 1, 1, 1])\n"
      ]
     }
    ],
@@ -495,14 +504,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OrderedDict([('n', bint(10))]) torch.Size([10])\n"
+      "OrderedDict([('n', bint(10))]) torch.Size([10, 1, 1, 1, 1])\n"
      ]
     }
    ],
@@ -524,16 +533,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OrderedDict([('plate1', bint(10))]) torch.Size([10])\n",
-      "OrderedDict([('plate2', bint(9))]) torch.Size([9, 1])\n",
-      "OrderedDict([('plate3', bint(10))]) torch.Size([10])\n"
+      "OrderedDict([('plate1', bint(10))]) torch.Size([10, 1, 1, 1, 1])\n",
+      "OrderedDict([('plate2', bint(9))]) torch.Size([9, 1, 1, 1, 1, 1])\n",
+      "OrderedDict([('plate3', bint(10))]) torch.Size([10, 1, 1, 1, 1])\n"
      ]
     }
    ],
@@ -590,7 +599,7 @@
     {
      "data": {
       "text/plain": [
-       "-1"
+       "-5"
       ]
      },
      "execution_count": 16,
