Rewrite tutorial to be more direct

--- a/tutorial/source/contrib_funsor_intro_ii.ipynb
+++ b/tutorial/source/contrib_funsor_intro_ii.ipynb
@@ -38,7 +38,9 @@
     "\n",
     "In part 1 of this tutorial, we were introduced to the new `pyro.contrib.funsor` backend for Pyro.\n",
     "\n",
-    "Here we'll look at how to use the components in `pyro.contrib.funsor` to implement a variable elimination inference algorithm from scratch. As before, we'll use `pyroapi` so that we can write our model with standard Pyro syntax."
+    "Here we'll look at how to use the components in `pyro.contrib.funsor` to implement a variable elimination inference algorithm from scratch. This tutorial assumes readers are familiar with enumeration-based inference algorithms in Pyro. For background and motivation, readers should consult the [enumeration tutorial](http://pyro.ai/examples/enumeration.html).\n",
+    "\n",
+    "As before, we'll use `pyroapi` so that we can write our model with standard Pyro syntax."
    ]
   },
   {
@@ -86,7 +88,9 @@
    "source": [
     "## Enumerating discrete variables\n",
     "\n",
-    "Our first step is to implement an effect handler that performs parallel enumeration of discrete latent variables. We'll do that by constructing a `funsor.Tensor` representing the support of each discrete latent variable and using the new `pyro.to_data` primitive from part 1 to convert it to a `torch.Tensor` with the appropriate shape."
+    "Our first step is to implement an effect handler that performs parallel enumeration of discrete latent variables. Here we will implement a stripped-down version of `pyro.poutine.enum`, the effect handler behind Pyro's most powerful general-purpose inference algorithms `pyro.infer.TraceEnum_ELBO` and `pyro.infer.mcmc.HMC`.\n",
+    "\n",
+    "We'll do that by constructing a `funsor.Tensor` representing the support of each discrete latent variable and using the new `pyro.to_data` primitive from part 1 to convert it to a `torch.Tensor` with the appropriate shape."
    ]
   },
   {
@@ -99,15 +103,29 @@
     "\n",
     "class EnumMessenger(NamedMessenger):\n",
     "    \n",
-    "    @pyroapi.pyro_backend(\"contrib.funsor\")  # necessary since we invoke pyro.to_data\n",
+    "    @pyroapi.pyro_backend(\"contrib.funsor\")  # necessary since we invoke pyro.to_data and pyro.to_funsor\n",
     "    def _pyro_sample(self, msg):\n",
     "        if msg[\"done\"] or msg[\"is_observed\"] or msg[\"infer\"].get(\"enumerate\") != \"parallel\":\n",
     "            return\n",
     "\n",
-    "        with funsor.interpreter.interpretation(funsor.terms.lazy):\n",
-    "            funsor_dist = pyro.to_funsor(msg[\"fn\"], funsor.reals())(value=msg[\"name\"])\n",
-    "            funsor_value = funsor_dist.enumerate_support()\n",
+    "        # We first compute a raw value using the standard enumerate_support method.\n",
+    "        # enumerate_support returns a value of shape:\n",
+    "        #     (support_size,) + (1,) * len(msg[\"fn\"].batch_shape).\n",
+    "        raw_value = msg[\"fn\"].enumerate_support(expand=False)\n",
+    "        \n",
+    "        # Next we'll use pyro.to_funsor to indicate that this dimension is fresh.\n",
+    "        funsor_value = pyro.to_funsor(\n",
+    "            raw_value,\n",
+    "            output=funsor.bint(raw_value.shape[0]),\n",
+    "            dim_to_name={-raw_value.dim(): msg[\"name\"]},\n",
+    "        )\n",
     "\n",
+    "        # Finally, we convert the value back to a PyTorch tensor with to_data,\n",
+    "        # which has the effect of reshaping and possibly permuting dimensions of raw_value.\n",
+    "        # Applying to_funsor and to_data in this way guarantees that\n",
+    "        # each enumerated random variable gets a unique fresh positional dimension\n",
+    "        # and that we can convert the model's log-probability tensors to funsor.Tensors\n",
+    "        # in a globally consistent manner.\n",
     "        msg[\"value\"] = pyro.to_data(funsor_value)\n",
     "        msg[\"done\"] = True"
    ]
@@ -116,9 +134,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Because this is an introductory tutorial, this implementation of `EnumMessenger` works directly with the site's PyTorch distribution since users familiar with PyTorch and Pyro may find it easier to understand. However, when using `contrib.funsor` to implement an inference algorithm in a more realistic setting, it is usually preferable to do as much computation as possible on funsors, as this tends to simplify complex indexing, broadcasting or shape manipulation logic.\n",
+    "\n",
+    "For example, in `EnumMessenger`, we might instead call `pyro.to_funsor` on `msg[\"fn\"]`:\n",
+    "```py\n",
+    "funsor_dist = pyro.to_funsor(msg[\"fn\"], output=funsor.reals())(value=msg[\"name\"])\n",
+    "# enumerate_support defined whenever isinstance(funsor_dist, funsor.distribution.Distribution)\n",
+    "funsor_value = funsor_dist.enumerate_support(expand=False)\n",
+    "raw_value = pyro.to_data(funsor_value)\n",
+    "```\n",
+    "Most of the more complete inference algorithms implemented in `pyro.contrib.funsor` follow this pattern, and we will see an example later in this tutorial."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Vectorizing a model across multiple samples\n",
     "\n",
-    "Next, since our priors over global variables are continuous and cannot be enumerated exactly, we will implement an effect handler that uses a global dimension to draw multiple samples in parallel from the model. To highlight the interoperability of `pyro.contrib.funsor` with most of Pyro's other machinery, our implementation will allocate a new `DimType.GLOBAL` particle dimension using `pyro.to_data` as in `EnumMessenger` above, then use Pyro's `BroadcastMessenger` to actually draw multiple samples.\n",
+    "Next, since our priors over global variables are continuous and cannot be enumerated exactly, we will implement an effect handler that uses a global dimension to draw multiple samples in parallel from the model. Our implementation will allocate a new particle dimension using `pyro.to_data` as in `EnumMessenger` above, but unlike the enumeration dimensions, we want the particle dimension to be shared across all sample sites, so we will mark it as a `DimType.GLOBAL` dimension when invoking `pyro.to_funsor`.\n",
     "\n",
     "Recall that in part 1 we saw that `DimType.GLOBAL` dimensions must be deallocated manually or they will persist until the final effect handler has exited. This low-level detail is taken care of automatically by the `GlobalNameMessenger` handler provided in `pyro.contrib.funsor` as a base class for any effect handlers that allocate global dimensions. Our vectorization effect handler will inherit from this class."
    ]
@@ -129,11 +163,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyro.poutine.broadcast_messenger import BroadcastMessenger\n",
-    "from pyro.poutine.indep_messenger import CondIndepStackFrame\n",
-    "\n",
     "from pyro.contrib.funsor.handlers.named_messenger import GlobalNamedMessenger\n",
-    "from pyro.contrib.funsor.handlers.runtime import DimType\n",
+    "from pyro.contrib.funsor.handlers.runtime import DimRequest, DimType\n",
     "\n",
     "class VectorizeMessenger(GlobalNamedMessenger):\n",
     "    \n",
@@ -141,23 +172,32 @@
     "        super().__init__()\n",
     "        self.name = name\n",
     "        self.size = size\n",
-    "        self._indices = funsor.Tensor(\n",
-    "            torch.arange(0, self.size),\n",
-    "            OrderedDict([(self.name, funsor.bint(self.size))])\n",
-    "        )\n",
     "\n",
     "    @pyroapi.pyro_backend(\"contrib.funsor\")\n",
-    "    def __enter__(self):\n",
-    "        super().__enter__()  # do this first to take care of global dim recycling\n",
-    "        # Here we indicate that the vectorization dimension is a DimType.GLOBAL dimension,\n",
-    "        # as opposed to a DimType.VISIBLE dimension that we would use in pyro.plate\n",
-    "        self.indices = pyro.to_data(self._indices, dim_type=DimType.GLOBAL)\n",
-    "        return self\n",
-    "\n",
     "    def _pyro_sample(self, msg):\n",
-    "        frame = CondIndepStackFrame(self.name, -self.indices.dim(), self.size, 0)\n",
-    "        msg[\"cond_indep_stack\"] = (frame,) + msg[\"cond_indep_stack\"]\n",
-    "        BroadcastMessenger._pyro_sample(msg)"
+    "        if msg[\"is_observed\"] or msg[\"done\"] or msg[\"infer\"].get(\"enumerate\") == \"parallel\":\n",
+    "            return\n",
+    "        \n",
+    "        # we'll first draw a raw batch of samples similarly to EnumMessenger.\n",
+    "        # However, since we are drawing a single batch from the joint distribution,\n",
+    "        # we don't need to take multiple samples if the site is already batched.\n",
+    "        if self.name in pyro.to_funsor(msg[\"fn\"], funsor.reals()).inputs:\n",
+    "            raw_value = msg[\"fn\"].rsample()\n",
+    "        else:\n",
+    "            raw_value = msg[\"fn\"].rsample(sample_shape=(self.size,))\n",
+    "        \n",
+    "        # As before, we'll use pyro.to_funsor to register the new dimension.\n",
+    "        # This time, we indicate that the particle dimension should be treated as a global dimension.\n",
+    "        fresh_dim = len(msg[\"fn\"].event_shape) - raw_value.dim()\n",
+    "        funsor_value = pyro.to_funsor(\n",
+    "            raw_value,\n",
+    "            output=funsor.reals(*msg[\"fn\"].event_shape),\n",
+    "            dim_to_name={fresh_dim: DimRequest(value=self.name, dim_type=DimType.GLOBAL)},\n",
+    "        )\n",
+    "        \n",
+    "        # finally, convert the sample to a PyTorch tensor using to_data as before\n",
+    "        msg[\"value\"] = pyro.to_data(funsor_value)\n",
+    "        msg[\"done\"] = True"
    ]
   },
   {
@@ -166,7 +206,11 @@
    "source": [
     "## Computing an ELBO with variable elimination\n",
     "\n",
-    "Our final effect handler will build up a lazy Funsor expression for the log of a Monte Carlo estimate of the marginal likelihood, a lower bound on the true log-evidence. We will call `pyro.to_funsor` on both the sample value and the distribution, showing how nearly all inference operations including log-probability density evaluation can be performed on `funsor.Funsor`s directly."
+    "Now that we have tools for enumerating discrete variables and drawing batches of samples, we can use those to compute quantities of interest for inference algorithms.\n",
+    "\n",
+    "Most inference algorithms in Pyro work with `pyro.poutine.Trace`s, custom data structures that contain parameters and sample site distributions and values and all of the associated metadata needed for inference computations. Our third effect handler `LogJointMessenger` departs from this design pattern, eliminating a tremendous amount of boilerplate in the process. It will build up a lazy Funsor expression for the logarithm of the joint probability density of a model. \n",
+    "\n",
+    "In our implementation of `LogJointMessenger`, unlike the previous two effect handlers, we will call `pyro.to_funsor` on both the sample value and the distribution to show how nearly all inference operations including log-probability density evaluation can be performed on `funsor.Funsor`s directly."
    ]
   },
   {
@@ -183,6 +227,11 @@
     "\n",
     "    @pyroapi.pyro_backend(\"contrib.funsor\")\n",
     "    def _pyro_post_sample(self, msg):\n",
+    "        \n",
+    "        # for Monte Carlo-sampled variables, we don't include a log-density term:\n",
+    "        if not msg[\"is_observed\"] and not msg[\"infer\"].get(\"enumerate\"):\n",
+    "            return\n",
+    "        \n",
     "        with funsor.interpreter.interpretation(funsor.terms.lazy):\n",
     "            funsor_dist = pyro.to_funsor(msg[\"fn\"], output=funsor.reals())\n",
     "            funsor_value = pyro.to_funsor(msg[\"value\"], output=funsor_dist.inputs[\"value\"])\n",
@@ -193,7 +242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And finally the actual loss function, which applies our three effect handlers and evaluates the final lazy expression using Funsor's `optimize` interpretation for variable elimination."
+    "And finally the actual loss function, which applies our three effect handlers to compute an expression for the log-density, marginalizes over discrete variables with `funsor.ops.logaddexp`, averages over Monte Carlo samples with `funsor.ops.add`, and evaluates the final lazy expression using Funsor's `optimize` interpretation for variable elimination."
    ]
   },
   {
@@ -212,8 +261,12 @@
     "    with funsor.interpreter.interpretation(funsor.terms.lazy):\n",
     "        prod_vars = frozenset({v.name})\n",
     "        sum_vars = frozenset(tr.log_joint.inputs) - prod_vars\n",
+    "        \n",
+    "        # sum over the discrete random variables we enumerated\n",
     "        expr = tr.log_joint.reduce(funsor.ops.logaddexp, sum_vars)\n",
-    "        expr = expr.reduce(funsor.ops.add, prod_vars)\n",
+    "        \n",
+    "        # average over the sample dimension\n",
+    "        expr = expr.reduce(funsor.ops.add, prod_vars) - funsor.Number(float(size))\n",
     "\n",
     "    return pyro.to_data(funsor.optimizer.apply_optimizer(expr))"
    ]
@@ -224,7 +277,7 @@
    "source": [
     "## Putting it all together\n",
     "\n",
-    "Finally, with all this machinery implemented, we can perform inference in our model."
+    "Finally, with all this machinery implemented, we can compute stochastic gradients wrt the ELBO."
    ]
   },
   {
@@ -247,9 +300,9 @@
       "x7 torch.Size([3, 1, 1, 1, 1, 1, 1])\n",
       "x8 torch.Size([3, 1, 1, 1, 1, 1])\n",
       "x9 torch.Size([3, 1, 1, 1, 1, 1, 1])\n",
-      "tensor(-175.6081, grad_fn=<SumBackward0>) (tensor([[ 3.4911,  0.7792, -4.2704],\n",
-      "        [ 1.5555,  0.1515, -1.7070],\n",
-      "        [ 0.1272,  0.2921, -0.4193]]), tensor([10.8165, -0.1219, -1.6229]))\n"
+      "tensor(-133.6274, grad_fn=<AddBackward0>) (tensor([[ 6.6364, -4.3153, -2.3211],\n",
+      "        [-0.8893, -0.0196,  0.9089],\n",
+      "        [ 0.5422, -2.5592,  2.0170]]), tensor([10.4256,  5.0803, 13.3189]))\n"
      ]
     }
    ],
